tests/paczka1/small_fuzzy/88327104.err
Error in line 9: b58Zi8 A122 5,6
Error in line 14: ahV7q S441 15,9
